[gd_scene load_steps=6 format=3 uid="uid://iqo8l1tl1nnb"]

[ext_resource type="Script" path="res://source/scenarios/main_menu.gd" id="1_boyui"]
[ext_resource type="FontFile" uid="uid://cf2yy60vesm0s" path="res://assets/data/pixelify-sans+.ttf" id="2_ovge4"]
[ext_resource type="Texture2D" uid="uid://g4sjtjtlphst" path="res://assets/images/bg_bottom.png" id="2_qlwsp"]
[ext_resource type="Texture2D" uid="uid://hdb6nj8lbj4r" path="res://assets/images/title.png" id="3_ykei0"]
[ext_resource type="PackedScene" uid="uid://cmjwjlnck6hcq" path="res://source/scenarios/credits_menu.tscn" id="4_stbrq"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_boyui")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qlwsp")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer"]
position = Vector2(592, 112)
scale = Vector2(5, 5)
texture = ExtResource("3_ykei0")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 70
alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="Play_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ovge4")
theme_override_font_sizes/font_size = 27
text = "PLAY"

[node name="Credits_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ovge4")
theme_override_font_sizes/font_size = 27
text = "CREDITS
"

[node name="Exit_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ovge4")
theme_override_font_sizes/font_size = 27
text = "EXIT
"

[node name="Credits_Menu" parent="." instance=ExtResource("4_stbrq")]
visible = false
layout_mode = 1
